fix horizontal scroll and mobile width

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     --fw-header: 700;
     --fs-paragraph: 1.125rem;
     --fs-paragraph--mobile: 0.9rem;
+    --outline-default: 5px auto #5E9ED6;
 }
 
 *, *::before, *::after {
@@ -33,11 +34,16 @@ body {
     font-family: var(--ff-primary);
     background-color: var(--clr-white);
     color: var(--clr-black);
+    overflow-x: hidden;
 }
 
 main, header, footer {
     margin: auto;
-    max-width: 30rem;
+    max-width: 25rem;
+}
+
+.focus:focus-within {
+    outline: var(--outline-default);
 }
 
 /* Header styles  */
@@ -46,7 +52,7 @@ main, header, footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-inline: 0.75rem;
+    padding-inline: 1.5rem;
     position: relative;
     margin-block-end: 0.25rem;
 }
@@ -115,7 +121,7 @@ div:has(> .navbar__hamburger-menu):hover {
     top: 0;
     right: 0;
     height: 100vh;
-    width: 13rem;
+    min-width: 15rem;
     box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .3);
     background: var(--clr-white);
     transition: transform 200ms ease-in-out;
